service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  namespace: default
spec:
  selector:
    app: frontend-app
  ports:
  - name: apprun
    port: 80
    targetPort: 3000
    protocol: TCP
  - name: apprunssl
    port: 443
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: backend-app
  namespace: default
spec:
  selector:
    app: backend-app
  ports:
  - name: apprun
    port: 3002
    targetPort: 3002
    protocol: TCP
  - name: oracledb
    port: 1521
    targetPort: 1521
    protocol: TCP
  - name: sshrun
    port: 2222
    targetPort: 2222
    protocol: TCP
  type: LoadBalancer
